src/objects/Offer__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Deposit__c</fullName>
        <label>Additional Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <defaultValue>&quot;Sixty (60) Days from the Effective Date&quot;</defaultValue>
        <label>Close Date</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feasibility_Period__c</fullName>
        <defaultValue>&quot;Thirty (30) Days from the Effective Date&quot;</defaultValue>
        <label>Feasibility Period</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financing_Period__c</fullName>
        <defaultValue>&quot;Thirty (30) Days from the Effective Date&quot;</defaultValue>
        <label>Financing Period</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Independent__c</fullName>
        <label>Independent Consideration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Deposit__c</fullName>
        <label>Initial Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <label>Assignment</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Offer_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Offer Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Price__c</fullName>
        <label>Offer Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner_Address__c</fullName>
        <formula>Listing__r.Owner_Contact__r.MailingStreet</formula>
        <label>Client Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_City__c</fullName>
        <formula>Listing__r.Owner_Contact__r.MailingCity</formula>
        <label>Client City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Company__c</fullName>
        <formula>Listing__r.Owner_Company__c</formula>
        <label>Client Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Contact__c</fullName>
        <formula>Listing__r.Owner_Contact__c</formula>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_State__c</fullName>
        <formula>Listing__r.Owner_Contact__r.MailingState</formula>
        <label>Client State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Zip__c</fullName>
        <formula>Listing__r.Owner_Contact__r.MailingPostalCode</formula>
        <label>Client Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <formula>Listing__r.Address__c</formula>
        <label>Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <formula>Listing__r.City__c</formula>
        <label>Property City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <formula>Listing__r.State__c</formula>
        <label>Property State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <formula>Listing__r.Name</formula>
        <label>Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchaser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offerer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Countered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Accepted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>Accepted</fullName>
        <columns>Listing__c</columns>
        <columns>NAME</columns>
        <columns>Purchaser__c</columns>
        <columns>Offer_Date__c</columns>
        <columns>Offer_Price__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Feasibility_Period__c</columns>
        <columns>Financing_Period__c</columns>
        <columns>Independent__c</columns>
        <columns>Initial_Deposit__c</columns>
        <columns>Additional_Deposit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </filters>
        <label>Accepted</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Countered</fullName>
        <columns>Listing__c</columns>
        <columns>NAME</columns>
        <columns>Purchaser__c</columns>
        <columns>Offer_Date__c</columns>
        <columns>Offer_Price__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Feasibility_Period__c</columns>
        <columns>Financing_Period__c</columns>
        <columns>Independent__c</columns>
        <columns>Initial_Deposit__c</columns>
        <columns>Additional_Deposit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Countered</value>
        </filters>
        <label>Countered</label>
    </listViews>
    <listViews>
        <fullName>Draft</fullName>
        <columns>Listing__c</columns>
        <columns>NAME</columns>
        <columns>Purchaser__c</columns>
        <columns>Offer_Date__c</columns>
        <columns>Offer_Price__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Feasibility_Period__c</columns>
        <columns>Financing_Period__c</columns>
        <columns>Independent__c</columns>
        <columns>Initial_Deposit__c</columns>
        <columns>Additional_Deposit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Draft</label>
    </listViews>
    <listViews>
        <fullName>Not_Accepted</fullName>
        <columns>Listing__c</columns>
        <columns>NAME</columns>
        <columns>Purchaser__c</columns>
        <columns>Offer_Date__c</columns>
        <columns>Offer_Price__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Feasibility_Period__c</columns>
        <columns>Financing_Period__c</columns>
        <columns>Independent__c</columns>
        <columns>Initial_Deposit__c</columns>
        <columns>Additional_Deposit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Accepted</value>
        </filters>
        <label>Not Accepted</label>
    </listViews>
    <listViews>
        <fullName>Pending_Seller_Review</fullName>
        <columns>Listing__c</columns>
        <columns>NAME</columns>
        <columns>Purchaser__c</columns>
        <columns>Offer_Date__c</columns>
        <columns>Offer_Price__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Feasibility_Period__c</columns>
        <columns>Financing_Period__c</columns>
        <columns>Independent__c</columns>
        <columns>Initial_Deposit__c</columns>
        <columns>Additional_Deposit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Seller Review</value>
        </filters>
        <label>Pending Seller Review</label>
    </listViews>
    <nameField>
        <label>Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <recordTypes>
        <fullName>Lease_Proposal</fullName>
        <active>true</active>
        <label>Lease Proposal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sale</fullName>
        <active>true</active>
        <label>Sale</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>